# misccpp

./: CMakeLists.txt  MiscCppConfig.cmake.in  README.md
include/: BufferEncode.hpp  cereal_raw_binary.hpp  nanomsg.hpp  snappy.hpp
include/misccpp/: BufferDecode.hpp  File.hpp  NanoPB.hpp  endian.hpp  lock_free_fifo.hpp  register.hpp  ringbuffer.hpp  zeroconf.hpp
include/misccpp/drivers/: DevGPIO.hpp  DevI2C.hpp  DevSPI.hpp  DevUSB.hpp  SerialPort.hpp  SocketCAN.hpp
include/misccpp/lowlevelcom/: boost_crc.hpp  bridge.hpp  bridge_linux.hpp  cobs.hpp  lowlevelcom.hpp  mux.hpp  mux_linux.hpp  utils.hpp
include/misccpp/lowlevelcom/transport/: transport_can.hpp  transport_i2c.hpp  transport_nanomsg.hpp  transport_netlink.hpp  transport_raw.hpp  transport_serial_port.hpp  transport_spi.hpp  transport_usb.hpp  transport_zeromq.hpp
scripts/: FindNanoMSG.cmake  FindXenomai.cmake  FindZeroMQ.cmake
sources/: MiscCpp.cpp  snappy.cpp  zeroconf.cpp  zeroconf_none.cpp
sources/drivers/: DevGPIO.cpp  DevI2C.cpp  DevSPI.cpp  DevUSB.cpp  SerialPort.cpp  SocketCAN.cpp
sources/lowlevelcom/: lowlevelcom.cpp  transport_can.cpp  transport_i2c.cpp  transport_netlink.cpp  transport_serial_port.cpp  transport_spi.cpp  transport_usb.cpp
tests/: CMakeLists.txt  UT_LowLevelCom_Bridge.cpp  UT_LowLevelCom_Mux.cpp  UT_LowLevelCom_TransportCAN.cpp  UT_LowLevelCom_TransportI2C.cpp  UT_LowLevelCom_TransportNanoMsg.cpp  UT_LowLevelCom_TransportSPI.cpp  UT_LowLevelCom_TransportSerialPort.cpp  UT_LowLevelCom_TransportUSB.cpp  UT_LowLevelCom_TransportZeroMQ.cpp  UT_MiscCpp.cpp
